--- a/docroot/sites/all/themes/tns/assets/_scss/screen.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/screen.scss
@@ -1,5 +1,6 @@
 /* Base
  * -----------------------------------------------------------------------------*/
+@import "base/fonts";
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
 @import "base/variables";
 @import "base/mixins";
