TNS-6: Fixed the logo sizing at smaller device widths.

--- a/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
@@ -29,6 +29,10 @@
 
 // MAX 910
 @media screen and (max-width: 910px) {
+  .not-front #logo {
+    width: 164px;
+  }
+  
   .js {
     #headerwrap,
     #primary-navigation,
