--- a/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
@@ -1,23 +1,3 @@
-// MAX 990
-@media screen and (max-width: 990px) {
-  // Footer
-  .region-footer {
-    .email-newsletter {
-      padding: 20px;
-      
-      .block {
-        &-content {
-          form > div > div {
-            &.signup-box {
-              clear: both;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
 // MAX 960
 @media screen and (max-width: 960px) {
   .not-front {
@@ -89,8 +69,67 @@
   }
 }
 
-// MAX 530
-@media screen and (max-width: 530px) {
+// MAX 883
+@media screen and (max-width: 883px) {
+  // Footer
+  .region-footer {
+    .email-newsletter {
+      padding: 20px;
+      
+      .block {
+        &-title {
+          h2 {
+            line-height: normal;
+          }
+        }
+        
+        &-content {
+          form > div > div {
+            &.signup-box {
+              clear: both;
+            }
+            
+            &.name-box {
+              width: 70%;
+            }
+            
+            &.zip-box {
+              width: 28%;
+            }
+            
+            &.form-actions,
+            &.signup-box {
+              margin-top: 2px;
+            }
+            
+            &.signup-box {
+              width: 70%;
+            }
+            
+            &.form-actions {
+              width: 28%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// MAX 760
+/*@media screen and (max-width: 760px) {
+  // Footer
+  .region-footer {
+    .email-newsletter {
+      clear: both;
+      float: none;
+      margin: 0;
+    }
+  }
+}*/
+
+// MAX 760
+@media screen and (max-width: 760px) {
   // Footer
   .region-footer {
     .email-newsletter {
