--- a/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
@@ -170,6 +170,10 @@
     width: 200px;
   }
   
+  .tour #contentwrap {
+    background-size: auto 100%;
+  }
+  
   // Footer
   .region-footer {
     .email-newsletter {
@@ -264,6 +268,51 @@
   #block-tns-site-kickstarter {
     bottom: 10px;
   }
+  
+  .tour .tour-dates {
+    font-size: 14px;
+    line-height: normal;
+    
+    th, td {
+      width: auto;
+      
+      &:first-child,
+      &:nth-child(2),
+      &:nth-child(3)
+      &:last-child, {
+        width: auto;
+      }
+    }
+  }
+  
+  .press--list {
+    &__image,
+    &__title,
+    &__body {
+      float: none;
+      clear: both;
+      width: 100%;
+    }
+    
+    &__image {
+      max-width: none;
+      margin-bottom: 1rem;
+      text-align: center;
+      
+      img {
+        width: auto;
+      }
+    }
+    
+    &__title,
+    &__body {
+      max-width: 400px;
+      margin: {
+        left: auto;
+        right: auto;
+      }
+    }
+  }
 }
 // MAX 400
 @media screen and (max-width: 400px) {
@@ -277,5 +326,9 @@
   #block-tns-site-kickstarter {
     width: 150px;
     left: 10px;
+  }
+  
+  .tour .tour-dates {
+    font-size: 12px;
   }
 }
