TNS-17: Added a block for the breakdown single release announcement.

--- a/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
@@ -115,6 +115,14 @@
       }
     }
   }
+  
+  .front {
+    .breakdown-release-announcement {
+      position: absolute;
+      top: auto;
+      bottom: 10px;
+    }
+  }
 }
 
 // MAX 883
