--- a/docroot/sites/all/themes/tns/assets/css/screen.css
+++ b/docroot/sites/all/themes/tns/assets/css/screen.css
@@ -443,6 +443,14 @@ body.node-type-webform #block-system-main {
   line-height: 0; }
   .front .field-name-field-lp-img img {
     display: block; }
+.front .breakdown-release-announcement {
+  position: absolute;
+  right: 3.3333%;
+  top: 25px;
+  width: 27.4166%;
+  min-width: 110px; }
+  .front .breakdown-release-announcement .content a, .front .breakdown-release-announcement .content img {
+    display: block; }
 
 .not-front {
   font-size: 14px;
@@ -862,7 +870,12 @@ body.node-type-webform #block-system-main {
       background: #28272f; }
   .js .front .mobile-menu-icon {
     z-index: 3;
-    margin-bottom: -60px; } }
+    margin-bottom: -60px; }
+
+  .front .breakdown-release-announcement {
+    position: absolute;
+    top: auto;
+    bottom: 10px; } }
 @media screen and (max-width: 883px) {
   .region-footer .email-newsletter {
     padding: 20px; }
