TNS-23: Setting the background position to fixed for larger browser windows and for smaller widths back to scrolled but with 100% width. All this to help avoid some instances (not all) of white space beneath the photo.

--- a/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
@@ -1,3 +1,15 @@
+// Max 1295
+@media screen and (max-width: 1295px) {
+  .tour {
+    #contentwrap {
+      background: {
+        size: auto 100%;
+        attachment: scroll;
+      }
+    }
+  }
+}
+
 // MAX 1010
 @media screen and (max-width: 1010px) and (min-width: 884px) {
   .region-footer .email-newsletter input[type="submit"] {
