--- a/docroot/sites/all/themes/tns/assets/_scss/page/_tour.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/page/_tour.scss
@@ -13,9 +13,10 @@
       position: center top;
       repeat: no-repeat;
       size: 100% auto;
+      attachment: fixed;
     }
   }
-  
+    
   .tour-dates {
     font-size: 16px;
     
