--- a/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
@@ -124,6 +124,7 @@
       .mobile-menu-icon {
         z-index: 3;
         margin-bottom: -60px;
+        @include linkAllStates(color, #000);
       }
     }
   }
@@ -230,7 +231,7 @@
             }
             
             &.form-actions {
-              width: 20%;
+              width: auto;
             }
           }
         }
@@ -279,6 +280,17 @@
           }
         }
       }
+    }
+  }
+  
+  .front {
+    #block-tns-site-october2015ep {
+      height: 500px;
+      background: url('../../../../modules/custom/tns_site/images/20151005-bg-tv.jpg') center top no-repeat;
+    }
+    
+    .debut-ep-img {
+      display: none;
     }
   }
 }
