--- a/docroot/sites/all/themes/tns/assets/css/screen.css
+++ b/docroot/sites/all/themes/tns/assets/css/screen.css
@@ -145,6 +145,10 @@ a {
   .kickstarter-button img {
     display: block; }
 
+.hide-text {
+  font-size: 0;
+  line-height: 0; }
+
 .mobile-menu-icon {
   display: none; }
 
@@ -429,7 +433,8 @@ body.node-type-webform #block-system-main {
   position: absolute;
   left: 70px;
   top: 70px;
-  z-index: 2; }
+  z-index: 2;
+  display: none; }
 .front #page-title {
   display: none; }
 .front .region-content {
@@ -451,6 +456,66 @@ body.node-type-webform #block-system-main {
   min-width: 110px; }
   .front .breakdown-release-announcement .content a, .front .breakdown-release-announcement .content img {
     display: block; }
+.front #block-tns-site-october2015ep {
+  position: relative;
+  width: 100%;
+  padding-bottom: 14px;
+  overflow: hidden;
+  text-align: center; }
+.front .debut-ep-img {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  max-width: 800px;
+  display: inline-block; }
+.front .debut-ep-tv {
+  display: inline-block; }
+.front .debut-ep-overlay {
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  top: 8.4%;
+  width: 100%;
+  text-align: center; }
+  .front .debut-ep-overlay p {
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 33px;
+    font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue", sans-serif; }
+  .front .debut-ep-overlay .item-list ul {
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    line-height: 0; }
+    .front .debut-ep-overlay .item-list ul li {
+      list-style: none;
+      display: inline-block;
+      margin: 0 0 0 8px; }
+      .front .debut-ep-overlay .item-list ul li:first-child {
+        margin-left: 0; }
+.front .debut-ep-music-link {
+  display: block; }
+  .front .debut-ep-music-link img {
+    display: block; }
+  .front .debut-ep-music-link.itunes, .front .debut-ep-music-link.google {
+    padding-top: 2px; }
+  .front .debut-ep-music-link.itunes {
+    width: 42px; }
+  .front .debut-ep-music-link.spotify {
+    width: 51px; }
+  .front .debut-ep-music-link.amazon {
+    width: 46px; }
+  .front .debut-ep-music-link.google {
+    width: 32px; }
+.front #block-system-main-menu {
+  z-index: 3; }
+  @media (min-width: 911px) {
+    .front #block-system-main-menu .content .menu .leaf a:link, .front #block-system-main-menu .content .menu .leaf a:visited, .front #block-system-main-menu .content .menu .leaf a:hover, .front #block-system-main-menu .content .menu .leaf a:active, .front #block-system-main-menu .content .menu .leaf a:focus {
+      color: #000; }
+    .front #block-system-main-menu .content .menu .leaf a:hover, .front #block-system-main-menu .content .menu .leaf a:active, .front #block-system-main-menu .content .menu .leaf a:focus {
+      border-color: #000; }
+    .front #block-system-main-menu .content .menu .leaf a.active {
+      border-color: #000; } }
 
 .not-front {
   font-size: 14px;
@@ -876,6 +941,8 @@ body.node-type-webform #block-system-main {
   .js .front .mobile-menu-icon {
     z-index: 3;
     margin-bottom: -60px; }
+    .js .front .mobile-menu-icon:link, .js .front .mobile-menu-icon:visited, .js .front .mobile-menu-icon:hover, .js .front .mobile-menu-icon:active, .js .front .mobile-menu-icon:focus {
+      color: #000; }
 
   .front .breakdown-release-announcement {
     position: absolute;
@@ -926,7 +993,7 @@ body.node-type-webform #block-system-main {
         width: 60%;
         margin-left: 0; }
       .region-footer .email-newsletter .block-content form > div > div.form-actions {
-        width: 20%; }
+        width: auto; }
 
   .lp-001-bottom .email-newsletter .block-title, .lp-001-bottom .email-newsletter .block-content {
     float: none;
@@ -943,7 +1010,13 @@ body.node-type-webform #block-system-main {
     width: 60%;
     margin-left: 0; }
   .lp-001-bottom .email-newsletter .block-content form > div > div.form-actions {
-    width: 20%; } }
+    width: 20%; }
+
+  .front #block-tns-site-october2015ep {
+    height: 500px;
+    background: url("../../../../modules/custom/tns_site/images/20151005-bg-tv.jpg") center top no-repeat; }
+  .front .debut-ep-img {
+    display: none; } }
 @media screen and (max-width: 560px) {
   #block-tns-site-kickstarter {
     bottom: 10px; }
