Hotfix: more issues with the background image on the tour page.

--- a/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_media-queries.scss
@@ -3,8 +3,9 @@
   .tour {
     #contentwrap {
       background: {
-        size: auto 100%;
+        //size: auto 100%;
         attachment: scroll;
+        color: #000;
       }
     }
   }
